--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -6,6 +6,7 @@
         type="text"
         placeholder="Email"
         name="mail"
+        autocomplete="username"
         [(ngModel)]="email"
         #mail="ngModel"
         class="form-control my-2"
@@ -18,6 +19,7 @@
         [type]="showPassword ? 'text' : 'password'"
         placeholder="Password"
         name="pword"
+        autocomplete="current-password"
         [(ngModel)]="password"
         #pword="ngModel"
         class="form-control my-2"
@@ -55,7 +57,8 @@
     <button
       type="submit"
       class="btn btn-success w-100"
-      [disabled]="form.invalid"
+      [disabled]="form.invalid || loading"
+      [value]="loading ? 'Logging In...' : 'Login'"
       style="cursor: pointer"
       (click)="login()"
     >
