homepage in progress

--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -121,7 +121,7 @@
     
     
 
-    <label for="jobrole">Choose a role:</label>
+    <label for="jobrole">I am a:</label>
     <select
       name="jobrole"
       id="jobrole"
