--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -288,7 +288,7 @@
     </div>
   </div>
 
-  <div class="all-fields text-center mt-40 d-lg-none">
+  <div class="explore-all text-center mt-5 d-lg-none">
     <a class="btn" href="">Explore all fields > </a>
   </div>
 
@@ -341,16 +341,18 @@
         <app-job-card *ngFor="let job of jobs" [job]="job"></app-job-card>
     </div>
 
-    <button>Explore all jobs ></button>
+    <div class="explore-all text-center mt-5 mb-4 d-lg-none">
+      <a class="btn" href="">Explore all jobs > </a>
+    </div>
 
-    <div>
-      <p>Do you want to post a job for your company? We can help.</p>
-      <button>Click Here</button>
+    <div class="job-posting">
+      <div>Do you want to post a job for <br> your company? <span>We can help.</span></div>
+      <a href="">Click Here</a>
     </div>
   </div>
 
-  <div>
-    <h1>Trusted by leading startups</h1>
+  <div class="testimonials">
+    <h1 class="header">Trusted by leading startups.</h1>
 
     <div>
       <div>
@@ -376,34 +378,99 @@
     </div>
   </div>
 
-  <div>
+  <div class="talents">
     <p>Looking for an expert?</p>
 
-    <h1>Find top talents from Jobi.</h1>
-
-    <div class="accordion"></div>
+    <h1 class="header">Find top talents from JobNet.</h1>
+    
+      <div class="accordion accordion-flush" id="accordionPanelsStayOpenExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+              Seamless Search
+            </button>
+          </h2>
+          <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionPanelsStayOpenExample">
+            <div class="accordion-body">It only takes 5 minutes. Set-up is smooth and simple, with fully customizable page design to reflect your brand. It only takes 5 minutes.</div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+              Hire Top Talents
+            </button>
+          </h2>
+          <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">Practice what you learned on realistic lorem quis test questions testing.</div>
+          </div>
+        </div>
+      </div>
 
     <button>Find Talents</button>
 
-    <img src="" alt="" />
+    <div>
+      <img src="/assets/img_7.jpg" alt="" width="50" height="50">
+      <img src="/assets/img_8.jpg" alt="" width="50" height="50">
+      <img src="/assets/img_9.jpg" alt="" width="50" height="50">
+    </div>
   </div>
 
-  <div>
+  <div class="QandA-wrapper">
     <h1>Questions and Answers</h1>
 
-    <div class="accordion"></div>
+    <div class="accordion" id="accordionExample">
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+            Accordion Item #1
+          </button>
+        </h2>
+        <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+            <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+            Accordion Item #2
+          </button>
+        </h2>
+        <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+            <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+            Accordion Item #3
+          </button>
+        </h2>
+        <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+          </div>
+        </div>
+      </div>
+    </div>
 
-    <button>Don't find the answer? We can help. Click here</button>
+    <div class="customer-support">
+      <div>Don't find the answer? <span>We can help.</span></div>
+      <a href="">Click Here</a>
+    </div>
   </div>
 
-  <div>
+  <div class="userSetup-wrapper">
     <hr />
     <h1>Most complete job portal.</h1>
     <p>Signup and start find your job and talents.</p>
 
-    <div>
-      <button>Looking for job?</button>
-      <button>Post a job</button>
+    <div class="userSetup-btns d-flex flex-column flex-lg-row gap-3">
+      <button class="btn1">Looking for job?</button>
+      <button class="btn2">Post a job</button>
     </div>
     <hr />
   </div>
