--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -308,7 +308,7 @@
       </div>
 
       <div class="fancy-banner-img">
-        <img src="/assets/img-1.jpg" />
+        <img src="/assets/img-1.jpg" loading="lazy" />
       </div>
     </div>
 
@@ -338,7 +338,7 @@
     <h1 class="header">New Job Listing</h1>
 
     <div class="view-jobs-wrapper">
-        <app-job-card *ngFor="let job of jobs" [job]="job"></app-job-card>
+      <app-job-card *ngFor="let job of jobs" [job]="job"></app-job-card>
     </div>
 
     <div class="explore-all text-center mt-5 mb-4 d-lg-none">
@@ -346,35 +346,101 @@
     </div>
 
     <div class="job-posting">
-      <div>Do you want to post a job for <br> your company? <span>We can help.</span></div>
+      <div>
+        Do you want to post a job for <br />
+        your company? <span>We can help.</span>
+      </div>
       <a href="">Click Here</a>
     </div>
   </div>
 
   <div class="testimonials">
-    <h1 class="header">Trusted by leading startups.</h1>
+    <h1 class="header mb-5">Trusted by leading startups.</h1>
 
-    <div>
-      <div>
-        <img src="" alt="" />
-        <h1>Shipbob</h1>
+    <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <!-- Carousel Item -->
+        <div
+          class="carousel-item"
+          *ngFor="let item of testimonials; let i = index"
+          [ngClass]="{ active: i === 0 }"
+        >
+          <div class="carousel-content">
+            <img src="{{ item.logo }}" alt="Logo" class="logo" />
+            <blockquote class="testimonial-quote">
+              "{{ item.quote }}"
+            </blockquote>
+            <p class="testifier-name">
+              <span>{{ item.name }}</span
+              >, {{ item.role }}
+            </p>
+            <hr class="rating-divider" />
+            <div class="rating">
+              <p>{{ item.rating }}</p>
+              <p class="rating-review">{{ item.review }}</p>
+              <ul class="rating-count">
+                <li *ngFor="let star of getStars(item.rating)">
+                  <fa-icon
+                    [icon]="
+                      star === 'full'
+                        ? faStarFull
+                        : star === 'half'
+                        ? faStarHalf
+                        : faStarEmpty
+                    "
+                  >
+                  </fa-icon>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </div>
-      <p>"Seattle"</p>
 
-      <p><span>Mark Joge,</span>Marketing Chief</p>
+      <!-- CONTROLS -->
+      <div class="carousel-controls">
+        <div class="prev-icon">
+          <svg
+            class="text-black"
+            data-bs-target="#carouselExample"
+            data-bs-slide="prev"
+            xmlns="http://www.w3.org/2000/svg"
+            width="32"
+            height="32"
+            viewBox="0 0 16 9"
+          >
+            <path
+              fill="currentColor"
+              d="M12.5 5h-9c-.28 0-.5-.22-.5-.5s.22-.5.5-.5h9c.28 0 .5.22.5.5s-.22.5-.5.5"
+            />
+            <path
+              fill="currentColor"
+              d="M6 8.5a.47.47 0 0 1-.35-.15l-3.5-3.5c-.2-.2-.2-.51 0-.71L5.65.65c.2-.2.51-.2.71 0s.2.51 0 .71L3.21 4.51l3.15 3.15c.2.2.2.51 0 .71c-.1.1-.23.15-.35.15Z"
+            />
+          </svg>
+        </div>
 
-      <hr />
-
-      <div>
-        <p>4.8</p>
-        <p>Awesome</p>
-        <img src="" alt="" />
+        <div class="next-icon">
+          <svg
+            class="text-black"
+            data-bs-target="#carouselExample"
+            data-bs-slide="next"
+            xmlns="http://www.w3.org/2000/svg"
+            width="32"
+            height="32"
+            viewBox="0 0 16 9"
+          >
+            <path
+              fill="currentColor"
+              d="M12.5 5h-9c-.28 0-.5-.22-.5-.5s.22-.5.5-.5h9c.28 0 .5.22.5.5s-.22.5-.5.5"
+            />
+            <path
+              fill="currentColor"
+              d="M10 8.5a.47.47 0 0 1-.35-.15c-.2-.2-.2-.51 0-.71l3.15-3.15l-3.15-3.15c-.2-.2-.2-.51 0-.71s.51-.2.71 0l3.5 3.5c.2.2.2.51 0 .71l-3.5 3.5c-.1.1-.23.15-.35.15Z"
+            />
+          </svg>
+        </div>
       </div>
-    </div>
-
-    <div>
-      <button></button>
-      <button></button>
     </div>
   </div>
 
@@ -382,36 +448,65 @@
     <p>Looking for an expert?</p>
 
     <h1 class="header">Find top talents from JobNet.</h1>
-    
-      <div class="accordion accordion-flush" id="accordionPanelsStayOpenExample">
-        <div class="accordion-item">
-          <h2 class="accordion-header">
-            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-              Seamless Search
-            </button>
-          </h2>
-          <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionPanelsStayOpenExample">
-            <div class="accordion-body">It only takes 5 minutes. Set-up is smooth and simple, with fully customizable page design to reflect your brand. It only takes 5 minutes.</div>
-          </div>
-        </div>
-        <div class="accordion-item">
-          <h2 class="accordion-header">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-              Hire Top Talents
-            </button>
-          </h2>
-          <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body">Practice what you learned on realistic lorem quis test questions testing.</div>
+
+    <div class="accordion accordion-flush" id="accordionPanelsStayOpenExample">
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button
+            class="accordion-button"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#panelsStayOpen-collapseOne"
+            aria-expanded="true"
+            aria-controls="panelsStayOpen-collapseOne"
+          >
+            Seamless Search
+          </button>
+        </h2>
+        <div
+          id="panelsStayOpen-collapseOne"
+          class="accordion-collapse collapse show"
+          data-bs-parent="#accordionPanelsStayOpenExample"
+        >
+          <div class="accordion-body">
+            It only takes 5 minutes. Set-up is smooth and simple, with fully
+            customizable page design to reflect your brand. It only takes 5
+            minutes.
           </div>
         </div>
       </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button
+            class="accordion-button collapsed"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#flush-collapseTwo"
+            aria-expanded="false"
+            aria-controls="flush-collapseTwo"
+          >
+            Hire Top Talents
+          </button>
+        </h2>
+        <div
+          id="flush-collapseTwo"
+          class="accordion-collapse collapse"
+          data-bs-parent="#accordionFlushExample"
+        >
+          <div class="accordion-body">
+            Practice what you learned on realistic lorem quis test questions
+            testing.
+          </div>
+        </div>
+      </div>
+    </div>
 
     <button>Find Talents</button>
 
     <div>
-      <img src="/assets/img_7.jpg" alt="" width="50" height="50">
-      <img src="/assets/img_8.jpg" alt="" width="50" height="50">
-      <img src="/assets/img_9.jpg" alt="" width="50" height="50">
+      <img src="/assets/img_7.jpg" alt="" width="50" height="50" />
+      <img src="/assets/img_8.jpg" alt="" width="50" height="50" />
+      <img src="/assets/img_9.jpg" alt="" width="50" height="50" />
     </div>
   </div>
 
@@ -421,37 +516,91 @@
     <div class="accordion" id="accordionExample">
       <div class="accordion-item">
         <h2 class="accordion-header">
-          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+          <button
+            class="accordion-button"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#collapseOne"
+            aria-expanded="true"
+            aria-controls="collapseOne"
+          >
             Accordion Item #1
           </button>
         </h2>
-        <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+        <div
+          id="collapseOne"
+          class="accordion-collapse collapse show"
+          data-bs-parent="#accordionExample"
+        >
           <div class="accordion-body">
-            <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+            <strong>This is the first item's accordion body.</strong> It is
+            shown by default, until the collapse plugin adds the appropriate
+            classes that we use to style each element. These classes control the
+            overall appearance, as well as the showing and hiding via CSS
+            transitions. You can modify any of this with custom CSS or
+            overriding our default variables. It's also worth noting that just
+            about any HTML can go within the <code>.accordion-body</code>,
+            though the transition does limit overflow.
           </div>
         </div>
       </div>
       <div class="accordion-item">
         <h2 class="accordion-header">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+          <button
+            class="accordion-button collapsed"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#collapseTwo"
+            aria-expanded="false"
+            aria-controls="collapseTwo"
+          >
             Accordion Item #2
           </button>
         </h2>
-        <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+        <div
+          id="collapseTwo"
+          class="accordion-collapse collapse"
+          data-bs-parent="#accordionExample"
+        >
           <div class="accordion-body">
-            <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+            <strong>This is the second item's accordion body.</strong> It is
+            hidden by default, until the collapse plugin adds the appropriate
+            classes that we use to style each element. These classes control the
+            overall appearance, as well as the showing and hiding via CSS
+            transitions. You can modify any of this with custom CSS or
+            overriding our default variables. It's also worth noting that just
+            about any HTML can go within the <code>.accordion-body</code>,
+            though the transition does limit overflow.
           </div>
         </div>
       </div>
       <div class="accordion-item">
         <h2 class="accordion-header">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+          <button
+            class="accordion-button collapsed"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#collapseThree"
+            aria-expanded="false"
+            aria-controls="collapseThree"
+          >
             Accordion Item #3
           </button>
         </h2>
-        <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+        <div
+          id="collapseThree"
+          class="accordion-collapse collapse"
+          data-bs-parent="#accordionExample"
+        >
           <div class="accordion-body">
-            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+            <strong>This is the third item's accordion body.</strong> It is
+            hidden by default, until the collapse plugin adds the appropriate
+            classes that we use to style each element. These classes control the
+            overall appearance, as well as the showing and hiding via CSS
+            transitions. You can modify any of this with custom CSS or
+            overriding our default variables. It's also worth noting that just
+            about any HTML can go within the <code>.accordion-body</code>,
+            though the transition does limit overflow.
           </div>
         </div>
       </div>
