fix another deployment issue

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -399,11 +399,12 @@
 
       <!-- CONTROLS -->
       <div class="carousel-controls">
-        <div class="prev-icon">
+        <div 
+        class="prev-icon" 
+        data-bs-target="#carouselExample"
+        data-bs-slide="prev">
           <svg
             class="text-black"
-            data-bs-target="#carouselExample"
-            data-bs-slide="prev"
             xmlns="http://www.w3.org/2000/svg"
             width="32"
             height="32"
@@ -420,11 +421,13 @@
           </svg>
         </div>
 
-        <div class="next-icon">
+        <div 
+        class="next-icon"
+        data-bs-target="#carouselExample"
+        data-bs-slide="next"
+        >
           <svg
             class="text-black"
-            data-bs-target="#carouselExample"
-            data-bs-slide="next"
             xmlns="http://www.w3.org/2000/svg"
             width="32"
             height="32"
